# leadgen-mcp-server

./: .gitignore  Procfile  README.md  client_references.json  pyproject.toml  railway.json  requirements.txt
scripts/: backfill_research_columns.py  live_test.py  meeting_report.py  run_enrichment_pass.py  run_sourcing_pass.py  setup_instantly_campaign.py  test_apollo_org.py
src/: config.py  http_api.py  server.py  supabase_client.py
src/lib/: brandkit_assemble.py  brandkit_parse.py  calcom.py  compliance_checks.py  demo_generator.py  granola.py  instantly.py  owner_match.py  platform_domains.py  pricing.py  reacti_tickets.py  render_client.py  slack.py  sourcing_filters.py
src/prompts/: brand_kit.md  brand_kit_flex.md  compliance.md  meeting_report.md  personalize.md  (+3 more)
tests/: test_booking_webhook.py  test_brandkit_assemble.py  test_brandkit_endpoint.py  test_brandkit_fetch_rich.py  test_brandkit_flex.py  test_brandkit_parse.py  test_brandkit_rehost.py  test_brandkit_tool.py  test_company_decideur_patch.py  test_company_model.py  test_compliance_checks.py  test_config_validate_env.py  test_consent_basis.py  test_demo_generator.py  test_discover_backlog.py  test_discover_endpoint.py  test_granola.py  test_instantly_list_emails.py  test_instantly_retry.py  test_lead_potential.py  test_meeting.py  test_owner_match.py  test_pricing.py  test_reacti_discover.py  test_reacti_sourcing.py  test_reacti_tickets.py  test_render_client.py  test_reply_autoreply_guards.py  test_reply_helpers.py  test_research_email_extraction.py  test_research_parsing.py  test_send_demo_guard.py  test_send_helpers.py  test_send_platform_defense.py  test_send_status.py  test_slack.py  test_smoke.py  test_sourcing_filters.py  test_supabase_retry.py  test_supabase_schema.py
(+15 files in other folders)
